templates/loki-base/kustomize/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-master
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    # cert-manager integration
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - <siem_domain>
      secretName: logs-tls-secret # cert-manager will create this
  rules:
    - host: <siem_domain>
